force-app/main/default/objects/DocGen_Template__c/fields/Base_Object_API__c.field-meta.xml
<CustomField>
    <fullName>Base_Object_API__c</fullName>
    <description>API Name of the root object (e.g., Account).</description>
    <label>Base Object API Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>