force-app/main/default/objects/DocGen_Template__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the template.</description>
    <label>Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>