force-app/main/default/objects/DocGen_Template__c/fields/Document_Title_Format__c.field-meta.xml
<CustomField>
    <fullName>Document_Title_Format__c</fullName>
    <description>Format for the generated file name (e.g., &quot;Quote_{QuoteNumber}&quot;). Supports merge fields.</description>
    <inlineHelpText>Enter the pattern for the document title. Use {Field} syntax for merge fields.</inlineHelpText>
    <label>Document Title Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>