force-app/main/default/objects/DocGen_Template__c/fields/DocuSign_Envelope_Configuration__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Envelope_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Linked DocuSign eSignature envelope configuration for this template.</description>
    <label>DocuSign Envelope Configuration</label>
    <referenceTo>dfsle__EnvelopeConfiguration__c</referenceTo>
    <relationshipLabel>DocGen Templates</relationshipLabel>
    <relationshipName>DocGen_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>