force-app/main/default/objects/DocGen_Template__c/fields/DocuSign_Signer_Count__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Signer_Count__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Number of signers required when sending via DocuSign. Defaults to 1.</description>
    <label>DocuSign Signer Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>