force-app/main/default/objects/DocGen_Template__c/fields/Output_Format__c.field-meta.xml
<CustomField>
    <fullName>Output_Format__c</fullName>
    <description>The desired output format for the generated document.</description>
    <label>Output Format</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Native</fullName>
                <default>true</default>
                <label>Native (.docx / .pptx)</label>
            </value>
            <value>
                <fullName>PDF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>