force-app/main/default/objects/DocGen_Template__c/fields/Query_Config__c.field-meta.xml
<CustomField>
    <fullName>Query_Config__c</fullName>
    <description>JSON storing the query logic or field mapping.</description>
    <label>Query Configuration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>