force-app/main/default/objects/DocGen_Template__c/fields/Test_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Test_Record_Id__c</fullName>
    <description>ID of a record to use for preview generation.</description>
    <label>Test Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>